src/test/ui/issues/issue-6596-1.rs
macro_rules! e {
    ($inp:ident) => (
        $nonexistent
        //~^ ERROR unknown macro variable `nonexistent`
    );
}

fn main() {
    e!(foo);
}
